fixed misaligned logo

--- a/_assets/stylesheets/custom.css
+++ b/_assets/stylesheets/custom.css
@@ -770,7 +770,7 @@ ul.contact-info {
   }
 
   #heading-wrapper {
-      transform: translateY(-150%);
+      transform: translateY(-125%);
   }
 
   #heading {
